--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "<MartinSStewart@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "create-elm-app": "^4.2.1",
     "elm": "^0.19.1-3",
     "elm-format": "^0.8.3",
     "elm-test": "^0.19.1-revision2"
